# larp-admin

./: .gitignore  .python-version  ARCHITECTURE.md  PLAN-streaming-npc-response.md  PLAN_COLLABORATIVE_EDITING.md  README.md  Taskfile.yml  docker-compose.yml  pack.sh
backend/: .dockerignore  .env.example  .env.local  .gitignore  Dockerfile  README.md  alembic.ini  build.sh  create_user.py  pyproject.toml  requirements.txt  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  01d0cd4d6b90_redesign_prompt_templates_table.py  2356bde222ec_add_session_id_and_npc_response_to_.py  2962c4569553_initial_migration.py  3a5f8c9d2e1b_change_uuid_to_prefixed_nanoid.py  4b6c9d3e2f1a_add_rls_policies.py  5c7d9e4f3a2b_rls_authenticated_role.py  6d8e0f5a4b3c_enable_realtime_for_collaborative_editing.py  7e9f1a6b5c4d_add_pgvector_session_embeddings.py  813a24a50f35_initial_migration.py  8f0a2b7c6d5e_add_debug_info_to_dialogue_logs.py  9a1b2c3d4e5f_add_username_to_dialogue_logs.py  9adf9aa2f35b_add_llm_configs_table.py  a1b2c3d4e5f6_add_users_table.py  acbf0b5fb934_add_prompt_templates_table.py  add_new_schema_fields.py  add_prereq_clue_ids_to_clues.py
backend/api/: index.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  ai_assistant.py  ai_enhancement.py  algorithms.py  auth.py  clues.py  debug_audit_logs.py  llm_configs.py  logs.py  npcs.py  reference_data.py  scenes.py  scripts.py  simulate.py  templates.py  utils.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/middleware/: __init__.py  request_id.py
backend/app/models/: __init__.py  algorithm.py  clue.py  debug_audit_log.py  llm_config.py  log.py  npc.py  prompt_template.py  scene.py  script.py  user.py
backend/app/schemas/: __init__.py  ai_assistant.py  algorithm.py  auth.py  clue.py  common.py  debug_audit_log.py  llm_config.py  log.py  npc.py  prompt_template.py  reference_data.py  scene.py  script.py  simulate.py
backend/app/services/: __init__.py  ai_enhancement.py  ai_story_assistant.py  auth.py  clue_tree.py  matching.py  template_renderer.py  vector_matching.py
backend/app/services/common/: __init__.py  llm_client.py  llm_config.py
backend/app/services/enhancement/: README.md  __init__.py  chain_analyzer.py  clue_enhancer.py  llm_base.py  npc_enhancer.py  service.py
backend/app/services/matching/: README.md  __init__.py  models.py  npc_response.py  service.py
backend/app/services/story_assistant/: README.md  __init__.py  clue_chain_generator.py  detail_generator.py  llm_base.py  npc_generator.py  script_builder.py  service.py  (+1 more)
backend/app/utils/: __init__.py  id_generator.py
backend/tests/: __init__.py  conftest.py  test_clue_tree.py  test_clues.py  test_llm_configs.py  test_matching.py  test_npcs.py  test_scripts.py  test_templates.py
(+196 files in other folders)
